Task-8
 - Реализованы ручки MultiCreateEntity и UpdateEntity.
 - Добавлен трейсинг для ручек.
 - Добавлен Producer сообщающий в кафку об успешном выполнении (на самом деле не всегда успешном, надо поправить...) CUD-событий.
 - Добавлены метрики для CRUD-ручек.
