# pkg/ocp-snippet-api/ocp-snippet-api.pb.gw.go
@@ -67,6 +67,42 @@ func local_request_OcpSnippetApi_CreateSnippetV1_0(ctx context.Context, marshale
 
 }
 
+var (
+	filter_OcpSnippetApi_MultiCreateSnippetV1_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_OcpSnippetApi_MultiCreateSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpSnippetApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateSnippetV1Request
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpSnippetApi_MultiCreateSnippetV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MultiCreateSnippetV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OcpSnippetApi_MultiCreateSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpSnippetApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateSnippetV1Request
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpSnippetApi_MultiCreateSnippetV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MultiCreateSnippetV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_OcpSnippetApi_DescribeSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpSnippetApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq DescribeSnippetV1Request
 	var metadata runtime.ServerMetadata
@@ -155,6 +191,42 @@ func local_request_OcpSnippetApi_ListSnippetsV1_0(ctx context.Context, marshaler
 
 }
 
+var (
+	filter_OcpSnippetApi_UpdateSnippetV1_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_OcpSnippetApi_UpdateSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpSnippetApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateSnippetV1Request
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpSnippetApi_UpdateSnippetV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateSnippetV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OcpSnippetApi_UpdateSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpSnippetApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateSnippetV1Request
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OcpSnippetApi_UpdateSnippetV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateSnippetV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_OcpSnippetApi_RemoveSnippetV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpSnippetApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq RemoveSnippetV1Request
 	var metadata runtime.ServerMetadata
@@ -236,6 +308,29 @@ func RegisterOcpSnippetApiHandlerServer(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_OcpSnippetApi_MultiCreateSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ocp.snippet.api.OcpSnippetApi/MultiCreateSnippetV1")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OcpSnippetApi_MultiCreateSnippetV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpSnippetApi_MultiCreateSnippetV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_OcpSnippetApi_DescribeSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -279,6 +374,29 @@ func RegisterOcpSnippetApiHandlerServer(ctx context.Context, mux *runtime.ServeM
 		}
 
 		forward_OcpSnippetApi_ListSnippetsV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_OcpSnippetApi_UpdateSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ocp.snippet.api.OcpSnippetApi/UpdateSnippetV1")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OcpSnippetApi_UpdateSnippetV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpSnippetApi_UpdateSnippetV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -366,6 +484,26 @@ func RegisterOcpSnippetApiHandlerClient(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_OcpSnippetApi_MultiCreateSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ocp.snippet.api.OcpSnippetApi/MultiCreateSnippetV1")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OcpSnippetApi_MultiCreateSnippetV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpSnippetApi_MultiCreateSnippetV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_OcpSnippetApi_DescribeSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -406,6 +544,26 @@ func RegisterOcpSnippetApiHandlerClient(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_OcpSnippetApi_UpdateSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ocp.snippet.api.OcpSnippetApi/UpdateSnippetV1")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OcpSnippetApi_UpdateSnippetV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpSnippetApi_UpdateSnippetV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("DELETE", pattern_OcpSnippetApi_RemoveSnippetV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -432,9 +590,13 @@ func RegisterOcpSnippetApiHandlerClient(ctx context.Context, mux *runtime.ServeM
 var (
 	pattern_OcpSnippetApi_CreateSnippetV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"snippets", "create", "v1"}, ""))
 
+	pattern_OcpSnippetApi_MultiCreateSnippetV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"snippets", "multi_create", "v1"}, ""))
+
 	pattern_OcpSnippetApi_DescribeSnippetV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"snippets", "describe", "v1", "snippet_id"}, ""))
 
 	pattern_OcpSnippetApi_ListSnippetsV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"snippets", "list", "v1"}, ""))
+
+	pattern_OcpSnippetApi_UpdateSnippetV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"snippets", "update", "v1"}, ""))
 
 	pattern_OcpSnippetApi_RemoveSnippetV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"snippets", "remove", "v1", "snippet_id"}, ""))
 )
@@ -442,9 +604,13 @@ var (
 var (
 	forward_OcpSnippetApi_CreateSnippetV1_0 = runtime.ForwardResponseMessage
 
+	forward_OcpSnippetApi_MultiCreateSnippetV1_0 = runtime.ForwardResponseMessage
+
 	forward_OcpSnippetApi_DescribeSnippetV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpSnippetApi_ListSnippetsV1_0 = runtime.ForwardResponseMessage
+
+	forward_OcpSnippetApi_UpdateSnippetV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpSnippetApi_RemoveSnippetV1_0 = runtime.ForwardResponseMessage
 )
